syntax = "proto3";

package infra;

option java_package = "com.jindi.infra.grpc";

service GreeterService {

  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {

  string name = 1;
}

message HelloReply {

  string message = 1;
}